# apytorch

./: .gitignore  CMakeLists.txt
c10/macros/: Export.h
c10/util/: Registry.h
caffe2/core/: blob_serialization.h  blob_serializer_base.h  blob_stats.h  common.h  context.h  context_base.h  db.h  event.cc  event.h  export_caffe2_op_to_c10.h  graph.h  init.h  memonger.h  module.h  net.h  net_async_base.h  net_async_scheduling.h  net_async_tracing.h  net_parallel.h  net_simple.h  operator.h  operator_gradient.h  operator_schema.cc  operator_schema.h  stats.h  tensor.h  test_utils.h  transform.h  types.h  workspace.h
caffe2/distributed/: file_store_handler.h  redis_store_handler.h  store_handler.h
caffe2/mpi/: mpi_common.h
caffe2/observers/: profile_observer.h  runcnt_observer.h  time_observer.h
caffe2/onnx/: backend.h  backend_rep.h  helper.h  onnx_exporter.h
caffe2/operators/: counter_ops.h  create_scope_op.h  cross_entropy_op.h  elementwise_ops_utils.h  generate_proposals_op.h  generate_proposals_op_util_nms_gpu.h  load_save_op.h  load_save_op_util.h  pad_op.h  sparse_lp_regularizer_op.h  sparse_normalize_op.h  text_file_reader_utils.h
caffe2/opt/: annotations.h  backend_cutting.h  bound_shape_inferencer.h  converter.h  device.h  distributed.h  fakefp16_transform.h  fusion.h  mobile.h  onnx_convert.h  onnxifi_transformer.h  optimize_ideep.h  optimizer.h  passes.h  shape_info.h  tvm_transformer.h
caffe2/predictor/: predictor.h  predictor_config.h  predictor_utils.cc  predictor_utils.h
cmake/: ProtoBuf.cmake
torch/: custom_class_detail.h  library.h
(+775 files in other folders)
